--- a/Views/Home/Home_RD.cshtml
+++ b/Views/Home/Home_RD.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
-    ViewBag.Title = "Dashboard - Head of Examination Department";
+    ViewBag.Title = "Dashboard - R&D Staff";
     Layout = "~/Views/Shared/_LayoutHome.cshtml";
-    var roleKey = ViewBag.RoleKey ?? "exam-head";
+    var roleKey = ViewBag.RoleKey ?? "rd-staff";
 }
 
 <script>
