--- a/Views/Home/Home_ExamHead.cshtml
+++ b/Views/Home/Home_ExamHead.cshtml
@@ -12,6 +12,7 @@
         <li><a href="@Url.Action("AssignToLecturers", "Exam")"><i class="fas fa-user-plus menu-icon"></i><span class="menu-text">Assign to Lecturers</span></a></li>
         <li><a href="@Url.Action("ReviewExams", "Exam")"><i class="fas fa-search-plus menu-icon"></i><span class="menu-text">Review Exams</span></a></li>
         <li><a href="@Url.Action("ApproveUpdateExam", "Exam")"><i class="fas fa-check-circle menu-icon"></i><span class="menu-text">Approve/Update Exam</span></a></li>
+        <li><a href="@Url.Action("ApprovalLogs", "Exam")"><i class="fas fa-clipboard-check menu-icon"></i><span class="menu-text">Approval Logs</span></a></li>
         <li><a href="@Url.Action("Notifications", "Home")"><i class="fas fa-bell menu-icon"></i><span class="menu-text">Notifications</span></a></li>
     </ul>
 }
