--- a/Views/Home/Home_SubjectLeader.cshtml
+++ b/Views/Home/Home_SubjectLeader.cshtml
@@ -12,6 +12,8 @@
         <li><a href="@Url.Action("AssignToLecturers", "Task")"><i class="fas fa-user-plus menu-icon"></i><span class="menu-text">Assign to Lecturers</span></a></li>
         <li><a href="@Url.Action("ReviewQuestions", "Question")"><i class="fas fa-search-plus menu-icon"></i><span class="menu-text">Review Questions</span></a></li>
         <li><a href="@Url.Action("ApproveExam", "Exam")"><i class="fas fa-check-circle menu-icon"></i><span class="menu-text">Approve Exam</span></a></li>
+        <li><a href="@Url.Action("SubmitExam", "Exam")"><i class="fas fa-upload menu-icon"></i><span class="menu-text">Submit Exam</span></a></li>
+        <li><a href="@Url.Action("SubmittedExams", "Exam")"><i class="fas fa-list menu-icon"></i><span class="menu-text">Submitted Exams</span></a></li>
         <li><a href="@Url.Action("Notifications", "Home")"><i class="fas fa-bell menu-icon"></i><span class="menu-text">Notifications</span></a></li>
     </ul>
 }
