--- a/Views/Shared/_LayoutHome.cshtml
+++ b/Views/Shared/_LayoutHome.cshtml
@@ -26,11 +26,11 @@
             <span class="sidebar-logo-abbr">Q</span>
         </div>
         @RenderSection("SidebarMenu", required: false)
-        <div class="sidebar-toggle-container">
+        <!--<div class="sidebar-toggle-container">
             <button class="sidebar-toggle" onclick="toggleSidebar()" id="sidebarToggleBtn">
                 <i class="fas fa-chevron-left"></i> <span class="menu-text">Collapse</span>
             </button>
-        </div>
+        </div>-->
     </aside>
     <div class="main-content">
         <!-- Header bar -->
