--- a/wwwroot/css/dashboard.css
+++ b/wwwroot/css/dashboard.css
@@ -18,7 +18,7 @@
     box-shadow: 2px 0 5px rgba(0,0,0,0.1);
 }
 
-    .sidebar.collapsed {
+    /*.sidebar.collapsed {
         width: 70px;
     }
 
@@ -41,7 +41,7 @@
 
         .sidebar.collapsed .sidebar-toggle {
             justify-content: center;
-        }
+        }*/
 
 .sidebar-header {
     text-align: center;
